<resources>
    <string name="app_name">Group_0501</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="back">Back</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="credit_card_num">Credit Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="file">File</string>
    <string name="search">Search</string>
    <string name="search_flights">Search Flights</string>
    <string name="search_itineraries">Search Itineraries</string>
    <string name="search_flights_itineraries">Search Flights and Itineraries</string>
    <string name="view_own_info">View Personal and Billing Info</string>
    <string name="view_booked_itineraries">View Booked Itineraries</string>
    <string name="view_client_info">View All Client Info</string>
    <string name="upload_client_info">Upload Client Info</string>
    <string name="client_uploaded">Client Uploaded</string>
    <string name="flight_uploaded">Flight Uploaded</string>
    <string name="prompt_invalid">Enter Valid File Path</string>
    <string name="upload_flight_info">Upload Flight Info</string>
    <string name="edit_own_info">Edit Info</string>
    <string name="edit_client_info">View or Edit Client Info</string>
    <string name="edit_flight_info">View or Edit Flight Info</string>
    <string name="book_itinerary_for_client">Book Itinerary For Client</string>
    <string name="book_itinerary">Book This Itinerary</string>
    <string name="cancel_booking">Cancel This Itinerary</string>
    <string name="flight_cancelled">Flight Cancelled</string>
    <string name="view_client_booked_itineraries">View Client Booked Itineraries</string>
    <string name="book_successful">Flights Booked</string>
    <string name="book_unsuccessful">Book Unsuccessful</string>
    <string name="invalid_login">Invalid login.</string>
    <string name="client_info_changed">Personal and Billing info updated</string>
    <string name="flight_info_changed">Flight info updated</string>
    <string name="upload">Upload</string>
    <string name="flight_file_path">Flight File Path</string>
    <string name="client_file_path">Client File Path</string>
    <string name="sort_by_cost">Sort by Cost</string>
    <string name="sort_by_time">Sort by Time</string>
    <string name="flight_number">Flight Number</string>
    <string name="departure_time">Departure Date</string>
    <string name="airline">Airline</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="num_seats">Number of Seats</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_date">Select Departure Date</string>
    <string name="invalid_expiry_date">Invalid Expiry Date, please enter Date of valid Format</string>
    <string name="no_booked_flights">You currently have no booked flights</string>
    <string name="to">" to "</string>
    <string name="hours">" hours"</string>
    <string name="cant_get_file">Could not open the selected file</string>
    <string name="cant_output_file">Could not save current status</string>
    <string name="clients_uploaded">Clients successfully uploaded</string>
    <string name="flights_uploaded">Flights successfully uploaded</string>
    <string name="invalid_number">An invalid number was entered</string>
    <string name="admin_viewing_client_no_flights">This client currently has no booked flights</string>
</resources>
