<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.group_0501.SearchFlightItineraryActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_type"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sort_flight"
            android:checked="true"
            android:text="@string/search_flights"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sort_itinerary"
            android:text="@string/search_itineraries"
            android:layout_weight="1"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_type"
        android:text="@string/select_date"
        android:id="@+id/select_date"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_date"
        android:id="@+id/display_date"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_date"
        android:hint="@string/origin"
        android:id="@+id/search_origin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_origin"
        android:hint="@string/destination"
        android:id="@+id/search_destination" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_destination"
        android:text="@string/search"
        android:id="@+id/search"
        android:onClick="searchFlightItinerary" />

</RelativeLayout>
