<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cs.b07.group_0501.AdminMainActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_flights_itineraries"
            android:id="@+id/search"
            android:onClick="search"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_client_info"
            android:layout_below="@+id/search"
            android:id="@+id/view_client_info"
            android:onClick="viewClients"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_client_info"
            android:layout_below="@+id/view_client_info"
            android:id="@+id/upload_client_info"
            android:onClick="uploadClientInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_client_info"
            android:text="@string/edit_flight_info"
            android:id="@+id/edit_flight_info"
            android:onClick="editFlightInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_flight_info"
            android:text="@string/upload_flight_info"
            android:id="@+id/upload_flight_info"
            android:onClick="uploadFlightInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_flight_info"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:onClick="logout"/>

    </RelativeLayout>
</ScrollView>