<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cs.b07.group_0501.ClientMainActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_booked_itineraries"
            android:id="@+id/view_booked_itineraries"
            android:onClick="viewBookedItineraries"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_booked_itineraries"
            android:text="@string/search_flights_itineraries"
            android:id="@+id/search_flights_itineraries"
            android:onClick="searchFlightsItinerary"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_flights_itineraries"
            android:text="@string/view_own_info"
            android:id="@+id/view_info"
            android:onClick="viewInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_info"
            android:text="@string/edit_own_info"
            android:id="@+id/edit_own_info"
            android:onClick="editSelfInfo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_own_info"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:onClick="logout"/>

    </RelativeLayout>
</ScrollView>